fix dark mode for token detail table

--- a/client/assets/scss/components/_card.scss
+++ b/client/assets/scss/components/_card.scss
@@ -270,9 +270,17 @@
 }
 
 .tomo-card--token {
+
   .tomo-card__table {
     @include media-breakpoint-up(2xl) {
       width: 100%;
+    }
+  }
+
+  .filter-address {
+    input[type="text"],
+    .btn {
+      height: 34px;
     }
   }
 
